--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-amplify/ui-react": "^6.2.0",
     "@aws-sdk/client-bedrock-runtime": "^3.658.1",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
